fix: properly center container on mobile

--- a/style.css
+++ b/style.css
@@ -8,14 +8,18 @@
   margin: 0;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-family: 'Inter', sans-serif;
   background-color: #11151c;
   color: #f2f3d9;
   display: grid;
   place-content: center;
-  height: 100vh;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
 
 button {
